improve blog post page

--- a/main/templates/main/post.html
+++ b/main/templates/main/post.html
@@ -3,16 +3,18 @@
 {% load static %}
 
 {% block content %}
-
-          <h2 class="blog-post-title">BMC Workshop</h2>
-          <p>Ο ρόλος και η χρησιμότητα του Business Model Canvas στην εξέλιξη μιας startup από επιχειρηματική ιδέα σε βιώσιμη επιχείρηση.</p>
-          <p>H συνεργασία OK!Thess και <a href="http://www.kemel.gr/" target="_blank">ΚΕΜΕΛ</a> ξεκινά με ένα workshop που έχει ως κύριο στόχο να αναδείξει τον Καμβά Επιχειρηματικού Μοντέλου ως βασικό επιχειρηματικό εργαλείο, το οποίο σε συνδυασμό με τεχνικές όπως SWOT Analysis, Brain Storming κ.α., αποτελεί μια αποτελεσματική μέθοδο για την επίλυση σημαντικών προβλημάτων στην πορεία μιας startup.</p>
-          <p>Η ημερίδα θα ξεκινήσει με την παρουσίαση του BMC και της πελατοκεντρικής επιχειρηματικής προσέγγισης που επιβάλει ως αποτέλεσμα της εξέλιξης του σύγχρονου Marketing.</p>
-          <p>Στην συνέχεια, προεπιλεγμένες ομάδες από το OK!Thess, θα παρουσιάσουν την επιχειρηματική ιδέα τους, το στάδιο στο οποίο βρίσκονται και το δεξί μέρος του BMC που αφορά στην εξωστρέφεια, αναφέροντας και το σημαντικότερο πρόβλημα που κατά την γνώμη τους αντιμετωπίζουν.</p>
-          <p>Θα δημιουργηθούν στην συνέχεια μικτές ομάδες μεντόρων του ΚΕΜΕΛ και startuppers προκειμένου να επιδιωχθεί η βέλτιστη λύση του προβλήματος μέσω τεχνικών brain storming.</p>
-          <p>Το workshop θα κλείσει με παρουσίαση των αποτελεσμάτων.</p>
-          <p>	------------ </p>
-          <p>Το πρώτο μέρος του workshop αρχίζει στις 10:00 και είναι ανοιχτό σε όλους. Υπάρχει περίπτωση να δοθεί η ευκαιρία και σε άλλες ομάδες - πέρα από τις ομάδες που φιλοξενούνται στο OK!Thess - να παρουσιάσουν το BMC τους και να έχουν feedback από τους μέντορες.</p>
-          <p>Αν ενδιαφέρεστε να παρακολουθήσετε το γενικό μέρος και να παρουσιάσετε το BMC σας στείλτε email στην διεύθυνση: mail@okthess.gr</p>
-          <p>Δηλώνοντας το όνομα σας ή το όνομα της εταιρίας σας, το κινητό σας τηλέφωνο και αν ενδιαφέρεστε να παρουσιάσετε τον καμβά σας. Σε αυτή την περίπτωση (και ανάλογα με τον αριθμό των αιτήσεων) θα σας ενημερώσουμε τηλεφωνικά αν η παρουσίαση του καμβά σας γίνεται δεκτή. Η παρακολούθηση του πρώτου μέρους γίνεται δεκτή αυτομάτως.</p>
+    <div class="container post">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <div class="post-content">
+                        <h1 class="post-content-title">{{ post.title }}</h1>
+                        <div class="post-content-meta text-muted">Αναρτήθηκε: {{ post.date }}</div>
+                        <p class="post-content-body">
+                            <img class="post-content-image" src="{{ post.image }}">
+                            {{ post.body }}
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
 {% endblock %}
