fix mentor description

--- a/main/templates/main/program-mentors.html
+++ b/main/templates/main/program-mentors.html
@@ -15,7 +15,7 @@
                                 <div class="program-main-mentor">
                                     <img src="{{ mentor.image }}" class="program-main-mentor-image" alt="mentor image">
                                     <div class="program-main-mentor-name">{{ mentor.name }}</div>
-                                    <p>{{ mentor.name }}</p>
+                                    <p>{{ mentor.description }}</p>
                                     <div class="program-main-mentor-links">
                                         {% if mentor.github %}
                                             <a href="{{ mentor.github }}">GitHub</a>
