--- a/main/templates/main/blog.html
+++ b/main/templates/main/blog.html
@@ -81,11 +81,11 @@
                 </div>
                 <div class="sidebar-module">
                     <h3>Elsewhere</h3>
-                    <ol class="list-unstyled">
-                        <li><a href="#">GitHub</a></li>
-                        <li><a href="#">Twitter</a></li>
-                        <li><a href="#">Facebook</a></li>
-                    </ol>
+                    <ul class="list-unstyled">
+                        <li><a href="https://github.com/OKThess">GitHub</a></li>
+                        <li><a href="https://twitter.com/okthess">Twitter</a></li>
+                        <li><a href="https://www.facebook.com/OKThess/">Facebook</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
