--- a/main/templates/main/blog.html
+++ b/main/templates/main/blog.html
@@ -65,18 +65,9 @@
                 <div class="sidebar-module">
                     <h3>Archives</h3>
                     <ol class="list-unstyled">
-                        <li><a href="#">March 2014</a></li>
-                        <li><a href="#">February 2014</a></li>
-                        <li><a href="#">January 2014</a></li>
-                        <li><a href="#">December 2013</a></li>
-                        <li><a href="#">November 2013</a></li>
-                        <li><a href="#">October 2013</a></li>
-                        <li><a href="#">September 2013</a></li>
-                        <li><a href="#">August 2013</a></li>
-                        <li><a href="#">July 2013</a></li>
-                        <li><a href="#">June 2013</a></li>
-                        <li><a href="#">May 2013</a></li>
-                        <li><a href="#">April 2013</a></li>
+                        {% for entry in archives_list %}
+                            <li><a href="{% url 'main:blog_archives' entry.year entry.month %}">{{ entry|date:"F Y" }}</a></li>
+                        {% endfor %}
                     </ol>
                 </div>
                 <div class="sidebar-module">
