--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -314,8 +314,31 @@ h3 {
   padding-right: 5%;
 }
 
-.index-blog-img > img {
+.index-blog-item-img > img {
   width: 300px;
+}
+
+.index-blog-item-btn {
+  color: #fff;
+  background: #1c599b;
+  padding: 5px 15px;
+  font-size: 14px;
+  text-decoration: none;
+}
+
+.index-blog-item:nth-child(1) .index-blog-item-btn {
+  color: #fff;
+  background: #1c599b;
+}
+
+.index-blog-item:nth-child(2) .index-blog-item-btn {
+  color: #fff;
+  background: #ee4031;
+}
+
+.index-blog-item:nth-child(3) .index-blog-item-btn {
+  color: #000;
+  background: #ecc732;
 }
 
 .index-events {
