fix index blog markup

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -56,15 +56,15 @@
     <div class="container index-blog">
         <div class="row">
             {% for post in featured_posts %}
-                <div class="col-md-4 col-sm-4">
-                    <a href="{% url 'main:blog_post' post.slug %}" class="index-blog-title">
+                <div class="col-md-4 col-sm-4 index-blog-item">
+                    <a href="{% url 'main:blog_post' post.slug %}" class="index-blog-item-title">
                         <h3>{{ post.title }}</h3>
                     </a>
-                    <div class="index-blog-img">
+                    <div class="index-blog-item-img">
                         <img src="{{ post.image }}" alt="post image">
                     </div>
                     <p>{{ post.teaser }}</p>
-                    <a class="btn-blue" href="{% url 'main:blog_post' post.slug %}" role="button">
+                    <a class="index-blog-item-btn" href="{% url 'main:blog_post' post.slug %}" role="button">
                         <span class="glyphicon glyphicon-exclamation-sign"></span><strong>Read</strong> more »
                     </a>
                 </div>
