--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -679,18 +679,29 @@ button.accordion.active:after {
 }
 
 .sidebar-module.sidebar-module-inset ul {
-  list-style: armenian;
-  padding-left: 5px;
+  list-style: none;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 5px;
 }
 
 .sidebar-module.sidebar-module-inset ul li {
-  padding: 5px 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 5px;
+  padding-left: 5px;
+  border-bottom: 1px solid #441040;
 }
 
 .sidebar-module.sidebar-module-inset ul li a {
-  font-size: 13px !important;
+  font-size: 14px;
   text-decoration: none;
-  color: 808080;
+  font-weight: 300;
+}
+
+.sidebar-module.sidebar-module-inset .sidebar-meetups ul li a {
+  font-size: 14px;
+  text-decoration: none;
   font-weight: 500;
 }
 
