add chavrons on blog sidebar

--- a/main/templates/main/blog.html
+++ b/main/templates/main/blog.html
@@ -29,37 +29,37 @@
                 <div class="sidebar-module sidebar-module-inset">
                     <ul>
                         <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+                                target="_blank">Business Owner Compensation <i class="glyphicon glyphicon-chevron-right"></i></a></li>
                         <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+                                target="_blank">Business Owner Compensation. Marathon Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
                         <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+                                target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
                         <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+                                target="_blank">Business Owner. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
                         <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+                                target="_blank">Business. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
                         <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+                                target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
                         <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+                                target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
                         <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+                                target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
                         <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+                                target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
                         <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+                                target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
                         <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+                                target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
                         <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+                                target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
                         <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+                                target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
                         <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+                                target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
                         <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+                                target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
                         <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/"
-                                target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+                                target="_blank">Business Owner Compensation. Marathon or Sprint <i class="glyphicon glyphicon-chevron-right"></i></a></li>
                     </ul>
                 </div>
                 <div class="sidebar-module">
@@ -69,14 +69,6 @@
                             <li><a href="{% url 'main:blog_archives' entry.year entry.month %}">{{ entry|date:"F Y" }}</a></li>
                         {% endfor %}
                     </ol>
-                </div>
-                <div class="sidebar-module">
-                    <h3>Elsewhere</h3>
-                    <ul class="list-unstyled">
-                        <li><a href="https://github.com/OKThess">GitHub</a></li>
-                        <li><a href="https://twitter.com/okthess">Twitter</a></li>
-                        <li><a href="https://www.facebook.com/OKThess/">Facebook</a></li>
-                    </ul>
                 </div>
             </div>
         </div>
