--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,18 +1,20 @@
 {% extends 'main/layout.html' %}
 
 {% load static %}
+{% load i18n %}
 
 {% block content %}
     <div class="container index-land">
         <div class="row">
             <div class="col-md-5">
                 <h1>ΟΚ!Τhess</h1>
-                <h2>Your early stage partner</h2>
+                <h2>{% trans 'Your early stage partner' %}</h2>
                 <p class="desc">
-                    OK!Thess provides space and technical support to teams of people
-                    with innovative ideas helping them to <strong>Validate a Business
-                    Model Fast</strong>, rather than hastily, and to <strong>Meet,
-                    Mix and Connect</strong> with like-minded peers.
+{% blocktrans %}OK!Thess provides space and technical support to teams of people
+with innovative ideas helping them to <strong>Validate a Business
+Model Fast</strong>, rather than hastily, and to <strong>Meet,
+Mix and Connect</strong> with like-minded peers.
+{% endblocktrans %}
                 </p>
                 <div id="mc_embed_signup">
                     <form action="//okthess.us15.list-manage.com/subscribe/post?u=e5030558dd0a4f89aeed05a0d&amp;id=a3d8e08f2a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
