add rules file link on program templates

--- a/main/templates/main/program-alumni.html
+++ b/main/templates/main/program-alumni.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="program-sidebar-regulation">
                         <div class="separator"></div>
-                        <h4><a href="#">Internal Regulation</a></h4>
+                        <h4><a href="{% static '/main/files/Κανονισμός-Λειτουργίας.pdf' %}">Internal Regulation</a></h4>
                         <div class="separator"></div>
                         <br>
                         <a class="btn-red" href="/apply/" role="button">Apply now!</a>
