change layout title

--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="{% static '/main/img/favicon.png' %}" type="image/png" sizes="32x32">
 
-    <title>OK!Thess | {{ page_title|default_if_none:"Thessaloniki's Innovation Ecosystem" }}</title>
+    <title>OK!Thess | {{ page_title|default:"Thessaloniki's Innovation Ecosystem" }}</title>
 
 	<meta http-equiv="Content-Type" content="text/html">
 	<meta name="description" content="OK!Thess provides space and technical support to teams with innovative ideas.">
