--- a/main/templates/main/program-mentors.html
+++ b/main/templates/main/program-mentors.html
@@ -35,23 +35,31 @@
             </div>
             <div class="col-md-3">
                 <div class="program-sidebar">
+                    <div class="program-sidebar-meetup">
+                        <a href="{% url 'main:program_meetup' %}">
+                            <h4>
+                                OK!Thess Meetup
+                                <i class="glyphicon glyphicon-console"></i>
+                            </h4>
+                            <div class="program-sidebar-meetup-content">
+                                The meetup of OK!Thess is the new thing in town.
+                                Click here to learn more
+                            </div>
+                        </a>
+                    </div>
+                    <div class="program-sidebar-about">
+                        <h4>How you can be a mentor</h4>
+                        <div class="program-sidebar-box">
+                            {% lorem 1 p %}
+                        </div>
+                        <br>
+                    </div>
                     <div class="program-sidebar-tabs">
                         <ul class="nav nav-pills nav-stacked program-sidebar-tabs-list">
                             <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_teams' %}">Teams</a></li>
                             <li class="program-sidebar-tabs-elem active"><a href="{% url 'main:program_mentors' %}">Mentors</a></li>
                             <li class="program-sidebar-tabs-elem"><a href="{% url 'main:program_alumni' %}">Alumni</a></li>
                         </ul>
-                    </div>
-                    <div class="program-sidebar-about">
-                        <h4>What is a mentor</h4>
-                        <div class="program-sidebar-box">
-                            {% lorem 1 p %}
-                        </div>
-                        <br>
-                    </div>
-                    <div class="program-sidebar-contribute">
-                        <h4>Why not contribute?</h4>
-                        <p>Want to help?</p>
                     </div>
                 </div>
             </div>
