fix isn footer image

--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -150,7 +150,7 @@
                         </a>
                         <h5>DONOR</h5><hr>
                         <a href="http://www.snf.org/el/" target="_blank">
-                            <img src="{% static '/main/img/footer/ISN.jpg' %}" alt="ISN" class="footer-content-item-img">
+                            <img src="{% static '/main/img/footer/isn.jpg' %}" alt="ISN" class="footer-content-item-img">
                         </a>
                     </div>
                 </div>
