--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -239,7 +239,12 @@
                 .done(function () {
                     // redirect from eg. '/en/blog/' to '/blog' so Django will re-redirect to already set lang
                     window.location.pathname = document.location.pathname.slice(3);
+                })
+                .fail(function (jqXHR, textStatus) {
+                    console.log('jqXHR:', jqXHR);
+                    console.log('textStatus:', textStatus);
                 });
+
         });
     </script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7E2raajPS5-4vEpx-LBOV0XkItvWQRt8&signed_in=true&callback=initMap"></script>
