--- a/main/templates/main/events.html
+++ b/main/templates/main/events.html
@@ -8,23 +8,27 @@
         <div class="row">
             <div class="col-md-9">
                 {% for event in events %}
-                    <div class="events-single">
+                    <div class="events-single {% if event.is_old %} events-single-dimmed {% endif %}">
                         <div class="row">
                             <div class="col-md-3">
                                 <a href="{{ event.link }}"><img src="{{ event.image|prepend_media }}"></a>
                             </div>
                             <div class="col-md-9">
                                 <div class="events-single-data">
-                                    <div class="events-single-data-date">{{ event.date }}</div>
-                                    <div class="events-single-data-organizer"><a href="{{ event.organizer_link }}">{{ event.organizer }}</a></div>
+                                    <div class="events-single-data-time">Time: {{ event.time_start }} to {{ event.time_end }}</div>
+                                    <div class="events-single-data-date">Date: {{ event.date }}</div>
                                 </div>
                                 <div class="events-single-title">
                                     <a href="{{ event.link }}">{{ event.title }}</a>
                                 </div>
                                 <p>{{ event.description }}</p>
                                 <div class="events-single-data">
-                                    <div class="events-single-data-start">Starts: {{ event.time_start }}</div>
-                                    <div class="events-single-data-end">Ends: {{ event.time_end }}</div>
+                                    <div class="events-single-data-organizer">Organized by: {{ event.organizer }}</div>
+                                    <div class="events-single-data-link">
+                                        <a href="{{ event.organizer_link }}" target="_blank">
+                                            More <i class="glyphicon glyphicon-chevron-right"></i>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
