fix slider arrow styling

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -38,8 +38,9 @@ Mix and Connect</strong> with like-minded peers.
                 </div>
             </div>
             <div class="col-md-7">
-                <div onclick="plusDivs(-1)" class="slider-arrow-left">&#10094;</div>
-                <div onclick="plusDivs(1)" class="slider-arrow-right">&#10095;</div>
+                <div onclick="plusDivs(1)" class="slider-arrow-right">
+                    <i class="glyphicon glyphicon-chevron-right"></i>
+                </div>
                 <div class="slider">
                     <img src="{% static '/main/img/slider-1.jpg' %}" class="slider-img">
                     <div class="slider-text">Community Events</div>
