--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -260,40 +260,28 @@ h3 {
   width: 100%;
 }
 
-.slider-arrow-left {
-  display: inline-block;
-  color: #000;
-  cursor: pointer;
-  font-size: 30px;
-  background: #000;
-  color: #fff;
-  padding-left: 15px;
-  padding-right: 15px;
-  transition: 0.1s;
-}
-
-.slider-arrow-left:hover {
-  background: #fff;
-  color: #000;
-  text-decoration: none;
-}
-
 .slider-arrow-right {
   display: inline-block;
-  color: #000;
   cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 25px;
   font-size: 30px;
-  background: #000;
-  color: #fff;
+  background: #fff;
+  color: #000;
   padding-left: 15px;
   padding-right: 15px;
   transition: 0.1s;
 }
 
 .slider-arrow-right:hover {
-  background: #fff;
-  color: #000;
+  background: #000;
+  color: #fff;
   text-decoration: none;
+}
+
+.slider-arrow-right > i {
+  font-size: 22px;
 }
 
 .slider-text {
