--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -66,7 +66,7 @@ Mix and Connect</strong> with like-minded peers.
                     <div class="index-blog-item-img">
                         <img src="{{ post.image }}" alt="post image">
                     </div>
-                    <p>{{ post.teaser }}</p>
+                    <p class="index-blog-item-para">{{ post.teaser }}</p>
                     <a class="index-blog-item-btn" href="{% url 'main:blog_post' post.slug %}" role="button">
                         <span class="glyphicon glyphicon-exclamation-sign"></span><strong>Read</strong> more »
                     </a>
