improve slide text styling

--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -294,7 +294,8 @@ h3 {
   padding-top: 5px;
   padding-bottom: 5px;
   position: relative;
-  top: -44px;
+  top: -52px;
+  left: 10px;
 }
 
 .input-small {
