change logo alt on teams

--- a/main/templates/main/program-teams.html
+++ b/main/templates/main/program-teams.html
@@ -13,7 +13,7 @@
                         {% for team in teams %}
                             <div class="col-md-4 program-main-company">
                                 <div class="program-main-company-image">
-                                    <a href="{{ team.link }}"><img src="{{ team.image }}" alt="team logo"></a>
+                                    <a href="{{ team.link }}"><img src="{{ team.image }}" alt="{{ team.name }} logo"></a>
                                 </div>
                                 <div class="program-main-company-name"><a href="{{ team.link }}" >{{ team.name }}</a></div>
                                 <p class="program-main-company-desc">{{ team.description }}</p>
