do not escape post body

--- a/main/templates/main/post.html
+++ b/main/templates/main/post.html
@@ -11,7 +11,7 @@
                         <div class="post-content-meta text-muted">Αναρτήθηκε: {{ post.date }}</div>
                         <p class="post-content-body">
                             <img class="post-content-image" src="{{ post.image }}">
-                            {{ post.body }}
+                            {{ post.body|safe }}
                         </p>
                     </div>
                 </div>
